# ContextLens

./: PRD.md  README.md  docs-architecture-00-Overview.md.md
docs/product/: PRD.md
docs/vision/: VISION.md
kiro-live-inspector/: README.md  pyproject.toml
kiro-live-inspector/kiro_live_inspector/: __init__.py  __main__.py  capture.py  cli.py  dashboard.py  metrics.py  models.py  parser.py  proxy.py  session.py  tokenizer.py  utils.py
kiro-proxy-poc/: README.md  pyproject.toml
kiro-proxy-poc/contextlens_poc/: __init__.py  cli.py  config.py  logging.py  main.py
kiro-proxy-poc/contextlens_poc/capture/: __init__.py  base.py  mitm.py  mock.py  replay.py  tunnel.py
kiro-proxy-poc/contextlens_poc/models/: __init__.py  connection.py
kiro-proxy-poc/contextlens_poc/proxy/: __init__.py  connection.py  forwarder.py  server.py
kiro-proxy-poc/contextlens_poc/utils/: __init__.py  http.py
