[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "kiro-live-inspector"
version = "0.1.0"
description = "Live terminal inspector for Kiro CLI LLM traffic using mitmproxy."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "ContextLens Engineering" }
]
dependencies = [
  "httpx>=0.27",
  "mitmproxy>=10.3",
  "orjson>=3.10",
  "pydantic>=2.7",
  "rich>=13.7",
  "typer>=0.12"
]

[project.scripts]
kiro-live-inspector = "kiro_live_inspector.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["kiro_live_inspector"]

[tool.ruff]
line-length = 100
target-version = "py312"

