[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "contextlens-poc"
version = "0.1.0"
description = "Engineering PoC for validating local AI assistant traffic capture."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "ContextLens Engineering" }
]
dependencies = [
  "anyio>=4.4",
  "httpx>=0.27",
  "orjson>=3.10",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "rich>=13.7",
  "structlog>=24.1",
  "typer>=0.12",
  "uvicorn>=0.30"
]

[project.scripts]
contextlens-poc = "contextlens_poc.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["contextlens_poc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
